--- a/aboutme.html
+++ b/aboutme.html
@@ -107,6 +107,70 @@
     </nav>
 
     <h1>About me</h1>
+<div class="about-box"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5">
+          <div class="">
+            <p class="title">Who am I? 👩🏻‍💻</p>
+            <p class="text"></br>I am a Spanish Communication Specialist with more than 6 years of experience in creating content. 
+              I'm a current student of UX and Graphic Design and I'm learning to build websites too. 
+              I love traveling, music and reading. Cozy nights at home playing board games are my safe place.
+          </p>
+           <p class="text"> I stronly believe that everyone has something to say but sometimes we cannot figure out how to <strong>communicate</strong>. 
+              That's when I come. 
+              I'm willing to help you to build an effective communication plan from 0. 
+              We'll use all kind of forms of communication: I'll help you building your brand, your socials and your website.
+              All clients are welcome, but I do specially love to help small bussiness own by women, lgbt+ or people of color.
+          </p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="d-flex justify-content-start">
+            <img
+              src="/img/hello.png"
+              width="300px"
+              class="img-fluid"
+              alt="vxferrer"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+       
+        <div class="col-md-6">
+          <div class="d-flex justify-content-center">
+            <p class="ab-hours-title">
+              CONTACT ME
+            </p>
+          </div>
+           <p class="ab-hours-text">
+           </br> email: <a href="mailto:vanesaferrercorzo@gmail.com" class="link-about">vanesaferrercorzo@gmail.com</a>
+           </br> instagram: <a href="https://instagram.com/vxferrer" class="link-about">@vxferrer</a>
+          </br> contact hours: mon - friday 10:00 to 18:00
+            </p>
+            <a href="/contact.html" class="contact-button" style="text-align: center;">Contact</a>
+        </div>
+         <div class="col-md-5">
+          <div class="">
+            <p class="title">My methods 🖥</p>
+            <p class="text"></br>It's very important to express what we are feeling, what we do want and most important what we 
+              <strong>do not</strong> want. That's why we'll have several meetings in order to talk about the process, what we like, what we desire
+              or if we are in need of something new that come up. In addition, you will be able to contact me out of the meetings
+              if you need it.
+              Of course every person has it needs so the attention will be personalized according to special needs, amount of work or other variables
+              that can appear. </p>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+
+<div class="tecnhologies">
+
+</div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
