--- a/aboutme.html
+++ b/aboutme.html
@@ -38,12 +38,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <a class="navbar-brand" href="/index.html"
+          <a class="navbar-brand" href="/home.html"
             ><img src="/img/logo-black.png" width="80px"
           /></a>
           <ul class="navbar-nav ms-auto me-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
+              <a class="nav-link active" aria-current="page" href="/home.html"
                 >Home</a
               >
             </li>
