--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="About vxferrer graphic designer and UX designer. Front-end developer for your small bussiness"
+      content="vxferrer helps you to get a nice branding design and web ready for your bussiness. front-end, graphic design and UX design."
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,77 +21,53 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>About vxferrer</title>
+    <title>vxferrer</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #e19397">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="nav navbar-nav navbar-center">
-            <a class="navbar-brand" href="/index.html"
-              ><img src="/img/logo-black.png" width="80px"
-            /></a>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
-                >Home</a
-              >
-            </li>
-
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                About
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="/aboutme.html">About me</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/resume.html">Resume / CV</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Work
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Graphic Design</a></li>
-                <li><a class="dropdown-item" href="#">Front-end</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact me</a>
-            </li>
-          </ul>
+    <div class="empty"></div>
+    <div class="container">
+      <div class="row">
+        <div class="row">
+          <div class="col-md-5">
+            <div class="d-flex justify-content-end">
+              <img
+                src="/img/hello.png"
+                width="300px"
+                class="img-fluid"
+                alt="vxferrer"
+              />
+            </div>
+          </div>
+          <div class="col-md-7">
+            <div class="justify-content-start">
+              <img
+                src="/img/logo.png"
+                width="150px"
+                alt="vxferrer logo"
+                class="hello-logo"
+              />
+              <p><a href="/aboutme.html" class="hel-about">About</a></p>
+              <p><a href="#" class="hel-work">Work</a></p>
+              <p>
+                <a
+                  href="https://www.instagram.com/vxferrer/"
+                  class="hel-ig"
+                  target="blank"
+                  ><img src="/img/ig.png" width="20px"
+                /></a>
+                <a
+                  href="https://twitter.com/vxferrer"
+                  class="hel-tw"
+                  target="blank"
+                  ><img src="/img/tw.png" width="20px"
+                /></a>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-
-    <h1>Home</h1>
-
+      <a href="/contact.html" class="hel-contact">Contact me</a>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
