--- a/resume.html
+++ b/resume.html
@@ -39,11 +39,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="nav navbar-nav navbar-center">
-            <a class="navbar-brand" href="/index.html"
+            <a class="navbar-brand" href="/home.html"
               ><img src="/img/logo-black.png" width="80px"
             /></a>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
+              <a class="nav-link active" aria-current="page" href="/home.html"
                 >Home</a
               >
             </li>
