--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 class="hello-logo"
               />
               <p><a href="/aboutme.html" class="hel-about">About</a></p>
-              <p><a href="#" class="hel-work">Work</a></p>
+              <p><a href="/work.html" class="hel-work">Work</a></p>
               <p>
                 <a
                   href="https://www.instagram.com/vxferrer/"
