--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,9 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/src/style.css" />
+    
     <title>About vxferrer</title>
   </head>
   <body>
@@ -107,7 +109,6 @@
     </nav>
 
     <h1>About me</h1>
-<div class="about-box"></div>
     <div class="container">
       <div class="row">
         <div class="col-md-5">
@@ -148,7 +149,7 @@
            <p class="ab-hours-text">
            </br> email: <a href="mailto:vanesaferrercorzo@gmail.com" class="link-about">vanesaferrercorzo@gmail.com</a>
            </br> instagram: <a href="https://instagram.com/vxferrer" class="link-about">@vxferrer</a>
-          </br> contact hours: mon - friday 10:00 to 18:00
+          </br> contact hours: monday - friday from 10:00 to 18:00
             </p>
             <a href="/contact.html" class="contact-button" style="text-align: center;">Contact</a>
         </div>
@@ -165,12 +166,48 @@
           </div>
         </div>
       </div>
-    </div>
-    </div>
 
-<div class="tecnhologies">
+        <div class="tech">
+          <div class="row" style="padding: 20px;">
+            <div class="col-md-6" style="font-weight: bold;">
+              Graphic Design
+            </div>
+            <div class="col-md-6" style="font-weight: bold;">
+              <img src="/img/ai-logo.png" width="80px">
+              <img src="/img/ps-logo.png" width="80px">
+              <img src="/img/id-logo.png" width="80px">
+              <img src="/img/lr-logo.png" width="80px">
+              <img src="/img/figma-logo.png" width="100px">
+            </div>
+          </div>
+          <div class="row" style="padding: 20px;">
+            <div class="col-md-6" style="font-weight: bold;">
+              Video Editing
+            </div>
+            <div class="col-md-6" style="font-weight: bold;">
+              <img src="/img/pr-logo.png" width="80px">
+              <img src="/img/ae-logo.png" width="80px">
+              <img src="/img/davinci-logo.png" width="60px">
+              <img src="/img/final-logo.png" width="80px">
+            </div>
+          </div>
+            <div class="row" style="padding: 20px;">
+            <div class="col-md-6" style="font-weight: bold;">
+              Front-end
+            </div>
+            <div class="col-md-6" style="font-weight: bold;">
+              <img src="/img/html-logo.png" width="80px">
+              <img src="/img/css-logo.png" width="80px">
+              <img src="/img/js-logo.png" width="80px">
+              <img src="/img/boot-logo.png" width="80px">
+              <img src="/img/git-logo.png" width="80px">
+            </div>
+          </div>
+        </div>
+        
+      </div>
+   
 
-</div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
