--- a/aboutme.html
+++ b/aboutme.html
@@ -45,13 +45,12 @@
           /></a>
           <ul class="navbar-nav ms-auto me-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/home.html"
-                >Home</a
-              >
+              <a href="/home.html" class="nav-link">Home</a>
             </li>
 
             <li class="nav-item dropdown">
               <a
+              class="nav-link active" aria-current="page"
                 class="nav-link dropdown-toggle"
                 href="#"
                 role="button"
