--- a/home.html
+++ b/home.html
@@ -14,6 +14,10 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -38,12 +42,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="nav navbar-nav navbar-center">
-            <a class="navbar-brand" href="/home.html"
-              ><img src="/img/logo-black.png" width="80px"
-            /></a>
+          <a class="navbar-brand" href="/home.html"
+            ><img src="/img/logo-black.png" width="80px"
+          /></a>
+          <ul class="navbar-nav ms-auto me-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/home.html"
+              <a href="/home.html" class="nav-link active" aria-current="page"
                 >Home</a
               >
             </li>
@@ -70,7 +74,7 @@
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="#"
+                href="/work.html"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -85,12 +89,85 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contact me</a>
             </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://www.instagram.com/vxferrer/"
+                target="_blank"
+                ><img src="/img/ig.png" width="20px"
+              /></a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://twitter.com/vxferrer"
+                target="_blank"
+                ><img src="/img/tw.png" width="20px"
+              /></a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <h1>Home</h1>
+    <div class="hero">
+      <img src="/img/welcome-home.png" width="50%">
+      <h3> We all have something to say, I'll show you how</h3>
+      <h4>ready to communicate?</h4>
+      <div>
+        <i class="bi bi-arrow-down"></i>
+      </div>
+    </br>
+      <a href="/contact.html" class="home-contact">Let's talk!</a>
+    </div>
+
+     <div class="services">
+      <h1 style="text-align: center; padding: 30px; margin-bottom: 40px; font-weight: bold; color: var(--font-color);"> Services </h1>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4" style="text-align: center;">
+              graphic design
+            </div>
+            <div class="col-md-4" style="text-align: center;">
+              Content creating
+            </div>
+            <div class="col-md-4" style="text-align: center;">
+              Web developing
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4" style="text-align: center;">
+              <img src="/img/home-design.png" width="70%">
+            </div>
+            <div class="col-md-4" style="text-align: center;">
+              <img src="/img/home-social.png" width="65%">
+            </div>
+            <div class="col-md-4" style="text-align: center;">
+             <img src="/img/home-front.png" width="80%">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="contact">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              Contact hours:
+            </div>
+            <div class="col-md-6">
+              </br>
+              I speak English 🇬🇧 and Spanish! 🇪🇸
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              monday to friday 
+            </br> from 10:00 to 18:00
+            </div>
+          </div>
+        </div>
+      </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
