--- a/home.html
+++ b/home.html
@@ -152,18 +152,20 @@
       <div class="contact">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
-              Contact hours:
+            <div class="col-md-4">
+              <strong>Contact hours</strong> 
             </div>
-            <div class="col-md-6">
-              </br>
+            <div class="col-md-4">
               I speak English 🇬🇧 and Spanish! 🇪🇸
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
               monday to friday 
             </br> from 10:00 to 18:00
+            </div>
+             <div class="col-md-4">
+              vanesaferrercorzo@gmail.com
             </div>
           </div>
         </div>
