--- a/aboutme.html
+++ b/aboutme.html
@@ -146,7 +146,7 @@
             </p>
           </div>
            <p class="ab-hours-text">
-           </br> email: <a href="mailto:vanesaferrercorzo@gmail.com" class="link-about">vanesaferrercorzo@gmail.com</a>
+           </br> email: <a href="mailto:vxferrer@hotmail.com" class="link-about">vxferrer@hotmail.com</a>
            </br> instagram: <a href="https://instagram.com/vxferrer" class="link-about">@vxferrer</a>
           </br> contact hours: monday - friday from 10:00 to 18:00
             </p>
