--- a/home.html
+++ b/home.html
@@ -165,7 +165,7 @@
             </br> from 10:00 to 18:00
             </div>
              <div class="col-md-4">
-              vanesaferrercorzo@gmail.com
+              vxferrer@hotmail.com
             </div>
           </div>
         </div>
