--- a/home.html
+++ b/home.html
@@ -124,29 +124,32 @@
      <div class="services">
       <h1 style="text-align: center; padding: 30px; margin-bottom: 40px; font-weight: bold; color: var(--font-color);"> Services </h1>
         <div class="container">
-          <div class="row">
-            <div class="col-md-4" style="text-align: center;">
-              graphic design
-            </div>
-            <div class="col-md-4" style="text-align: center;">
-              Content creating
-            </div>
-            <div class="col-md-4" style="text-align: center;">
-              Web developing
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4" style="text-align: center;">
-              <img src="/img/home-design.png" width="70%">
-            </div>
-            <div class="col-md-4" style="text-align: center;">
-              <img src="/img/home-social.png" width="65%">
-            </div>
-            <div class="col-md-4" style="text-align: center;">
-             <img src="/img/home-front.png" width="80%">
-            </div>
-          </div>
+          <div class="row" style="text-align: center; padding: 20px;">
+            <div class="col-md-4" style="padding: 20px;">
+          <div class="card" style="width: 20rem;">
+          <img src="/img/home-social.png" class="card-img-top" alt="...">
+            <div class="card-body">
+             <h5 class="card-title">Graphic Design</h5>
+           </div>
         </div>
+            </div>
+            <div class="col-md-4" style="padding: 20px;">
+          <div class="card" style="width: 20rem;">
+          <img src="/img/home-design.png" class="card-img-top" alt="...">
+            <div class="card-body">
+             <h5 class="card-title">Graphic Design</h5>
+            </div>
+        </div>
+            </div>
+            <div class="col-md-4" style="padding: 20px;">
+          <div class="card" style="width: 20rem;">
+          <img src="/img/home-front.png" class="card-img-top" alt="...">
+            <div class="card-body">
+             <h5 class="card-title">Graphic Design</h5>
+           </div>
+        </div>
+            </div>
+        </div>  
       </div>
 
       <div class="contact">
