--- a/home.html
+++ b/home.html
@@ -129,7 +129,7 @@
           <div class="card" style="width: 20rem;">
           <img src="/img/home-social.png" class="card-img-top" alt="...">
             <div class="card-body">
-             <h5 class="card-title">Graphic Design</h5>
+             <h5 class="card-title">Social Media</h5>
            </div>
         </div>
             </div>
@@ -145,7 +145,7 @@
           <div class="card" style="width: 20rem;">
           <img src="/img/home-front.png" class="card-img-top" alt="...">
             <div class="card-body">
-             <h5 class="card-title">Graphic Design</h5>
+             <h5 class="card-title">Web developer</h5>
            </div>
         </div>
             </div>
@@ -169,6 +169,15 @@
             </div>
              <div class="col-md-4">
               vxferrer@hotmail.com
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                
+              </div>
+              <div class="col-md-4">
+                <a href="https://twitter.com/vxferrer"> <img src="/img/tw.png" style="width: 25px;"> </a>
+                <a href="https://instagram.com/vxferrer"> <img src="/img/ig.png" style="width: 25px;"> </a>
+              </div>
             </div>
           </div>
         </div>
