--- a/resume.html
+++ b/resume.html
@@ -90,7 +90,7 @@
       </div>
     </nav>
 
-    <h1>Resume</h1>
+    <img src="/img/resume.png" class="resume" style="display: block" />
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
