--- a/aboutme.html
+++ b/aboutme.html
@@ -79,12 +79,11 @@
                 Work
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Graphic Design</a></li>
-                <li><a class="dropdown-item" href="#">Front-end</a></li>
+                <li><a class="dropdown-item" href="/work.html">Front-end</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact me</a>
+              <a class="nav-link" href="/contact.html">Contact me</a>
             </li>
             <li class="nav-item">
               <a
