--- a/resume.html
+++ b/resume.html
@@ -38,12 +38,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="nav navbar-nav navbar-center">
-            <a class="navbar-brand" href="/home.html"
-              ><img src="/img/logo-black.png" width="80px"
-            /></a>
+          <a class="navbar-brand" href="/home.html"
+            ><img src="/img/logo-black.png" width="80px"
+          /></a>
+          <ul class="navbar-nav ms-auto me-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/home.html"
+              <a href="/home.html" class="nav-link active" aria-current="page"
                 >Home</a
               >
             </li>
@@ -78,12 +78,29 @@
                 Work
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Graphic Design</a></li>
-                <li><a class="dropdown-item" href="#">Front-end</a></li>
+                <li>
+                  <a class="dropdown-item" href="/work.html">Front-end</a>
+                </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact me</a>
+              <a class="nav-link" href="/contact.html">Contact me</a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://www.instagram.com/vxferrer/"
+                target="_blank"
+                ><img src="/img/ig.png" width="20px"
+              /></a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://twitter.com/vxferrer"
+                target="_blank"
+                ><img src="/img/tw.png" width="20px"
+              /></a>
             </li>
           </ul>
         </div>
