--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
     <title>About vxferrer</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #e19397">
+ <nav class="navbar navbar-expand-lg" style="background-color: #e19397">
       <div class="container-fluid">
         <button
           class="navbar-toggler"
@@ -38,12 +38,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="nav navbar-nav navbar-center">
-            <a class="navbar-brand" href="/home.html"
-              ><img src="/img/logo-black.png" width="80px"
-            /></a>
+          <a class="navbar-brand" href="/home.html"
+            ><img src="/img/logo-black.png" width="80px"
+          /></a>
+          <ul class="navbar-nav ms-auto me-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/home.html"
+              <a href="/home.html" class="nav-link active" aria-current="page"
                 >Home</a
               >
             </li>
@@ -59,14 +59,18 @@
                 About
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/">About me</a></li>
-                <li><a class="dropdown-item" href="#">Resume / CV</a></li>
+                <li>
+                  <a class="dropdown-item" href="/aboutme.html">About me</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="/resume.html">Resume / CV</a>
+                </li>
               </ul>
             </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="#"
+                href="/work.html"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -74,19 +78,72 @@
                 Work
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Graphic Design</a></li>
-                <li><a class="dropdown-item" href="#">Front-end</a></li>
+                <li>
+                  <a class="dropdown-item" href="/work.html">Front-end</a>
+                </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact me</a>
+              <a class="nav-link" href="/contact.html">Contact me</a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://www.instagram.com/vxferrer/"
+                target="_blank"
+                ><img src="/img/ig.png" width="20px"
+              /></a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://twitter.com/vxferrer"
+                target="_blank"
+                ><img src="/img/tw.png" width="20px"
+              /></a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <h1>Portfolio</h1>
+    <h1 class="port-title">Portfolio</h1>
+
+    <div class="portfolio">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="img/yoga.png" class="img-fluid rounded shadow-sm p-1 border" alt="project by vxferrer called yoga App">
+        </div>
+         <div class="col-md-7">
+          <p class="yoga-title">Yoga App</p>
+          <p class="yoga-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
+           <div class="mt-5">
+          <a href="#" class="yoga-link">Launch Yoga App</a>
+        </div>
+        </div>
+        <div class="col-md-7">
+          <p class="yoga-title">Weather App</p>
+          <p class="yoga-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
+           <div class="mt-5">
+          <a href="#" class="yoga-link">Launch Weather App</a>
+        </div>
+        </div>
+        <div class="col-md-5">
+          <img src="img/weather.png" class="img-fluid rounded shadow-sm p-1 border" alt="project by vxferrer called weather App">
+        </div>
+        <div class="col-md-5">
+          <img src="img/yogurt.png" class="img-fluid rounded shadow-sm p-1 border" alt="project by vxferrer called yogurt App"> 
+        </div>
+         <div class="col-md-7">
+          <p class="yoga-title">Yogurt App</p>
+          <p class="yoga-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
+           <div class="mt-5">
+          <a href="#" class="yoga-link">Launch Yogurt App</a>
+        </div>
+        </div>
+      </div>
+      </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
